--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li class="important-places">Dhaka</li>
                 <li class="important-places">Cumilla</li>
                 <li class="important-places">Cantonment</li>
-                <li class="other-places">Chattrogram</li>
+                <li class="other-places">Chottrogram</li>
             </ul>
         </section>
     </main>
